--- a/dashboard.html
+++ b/dashboard.html
@@ -39,6 +39,12 @@
 </head>
 <body>
 
+<nav class="top-nav">
+    <a href="index.html" class="nav-tab active">Home</a>
+    <a href="dashboard.html" class="nav-tab">Dashboard</a>
+    <a href="insights.html" class="nav-tab">Community Insights</a>
+</nav>
+    
 <div class="header">
     <span>Cheverly EJAT Network</span>
     <span style="font-size:0.7rem; opacity:0.8;">Live Portal</span>
