--- a/dashboard.html
+++ b/dashboard.html
@@ -44,7 +44,10 @@
 <body>
 
 <div class="header">
-    <span style="font-weight: bold; font-size: 1.1rem;">Cheverly EJAT Network</span>
+    <div class="header-left">
+        <span>Cheverly EJAT Network</span>
+        <span style="font-size:0.7rem; opacity:0.8; margin-left: 10px;">Live Portal</span>
+    </div>
     <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="dashboard.html" class="active">Dashboard</a>
