--- a/dashboard.html
+++ b/dashboard.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheverly EJAT Network - Live Dashboard</title>
+    <title>Cheverly EJAT - Cumulative Exposure Dashboard</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <style>
         :root { --navy: #1a305e; --blue: #4477ce; }
         body { margin: 0; font-family: system-ui, sans-serif; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
-        /* Header & Nav */
-        .header { background: var(--navy); color: white; padding: 0 20px; display: flex; justify-content: space-between; align-items: center; height: 60px; flex-shrink: 0; border-bottom: 3px solid var(--blue); }
-        .nav-links { display: flex; height: 100%; }
-        .nav-links a { color: rgba(255,255,255,0.7); text-decoration: none; padding: 0 20px; display: flex; align-items: center; font-weight: bold; transition: 0.3s; }
-        .nav-links a.active { color: white; background: rgba(255,255,255,0.2); border-bottom: 4px solid white; }
-        /* Layout */
+        .header { background: var(--navy); color: white; padding: 0 20px; display: flex; justify-content: space-between; align-items: center; height: 60px; flex-shrink: 0; }
+        .nav-links a { color: rgba(255,255,255,0.7); text-decoration: none; padding: 0 20px; font-weight: bold; }
+        .nav-links a.active { color: white; border-bottom: 4px solid white; height: 100%; display: inline-flex; align-items: center; }
         #container { display: flex; flex: 1; min-height: 0; }
-        #sidebar { width: 340px; background: #f8f9fa; border-right: 1px solid #ddd; padding: 20px; overflow-y: auto; display: flex; flex-direction: column; gap: 20px; }
-        #map { flex: 1; background: #e9ecef; }
-        .card { background: white; border-radius: 12px; padding: 20px; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.05); border-top: 8px solid #ccc; }
-        .aqi-val { font-size: 64px; font-weight: 800; line-height: 1; margin: 10px 0; }
+        #sidebar { width: 340px; background: #f8f9fa; border-right: 1px solid #ddd; padding: 20px; overflow-y: auto; }
+        #map { flex: 1; }
+        .card { background: white; border-radius: 12px; padding: 20px; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.05); border-top: 8px solid #ccc; margin-bottom: 20px; }
+        .aqi-val { font-size: 64px; font-weight: 800; margin: 10px 0; }
         .label { font-size: 0.75rem; font-weight: bold; color: #666; text-transform: uppercase; }
+        .protocol-box { text-align: left; font-size: 0.85rem; line-height: 1.5; color: #444; }
     </style>
 </head>
 <body>
@@ -39,80 +37,79 @@
         <div class="card" id="aqiCard">
             <div class="label">Current CE-AQI</div>
             <div class="aqi-val" id="aqiDisplay">--</div>
-            <div id="statusLabel" style="font-weight: bold;">CONNECTING...</div>
+            <div id="statusText" style="font-weight: bold;">CONNECTING...</div>
         </div>
-        <div class="card" style="text-align: left; font-size: 0.85rem;">
+        <div class="card protocol-box">
             <div class="label" style="margin-bottom: 10px;">Protocol Summary</div>
-            <strong>Base Value:</strong> Highest individual pollutant AQI.<br>
-            <strong>Adders:</strong> 1-3% multipliers for co-pollutant exposure ≥ 80 AQI.
+            <strong>Base Value:</strong> Highest individual AQI.<br>
+            <strong>Adders:</strong> 1-3% multipliers applied for co-pollutant exposure &ge; 80 AQI.
         </div>
     </aside>
     <div id="map"></div>
 </div>
 
 <script>
-    // API KEYS
     const QA_KEY = "QC2TTD7QPKL1GXSTHDXAXOC3";
     const COMET_KEY = "40685f12-d3e5-316e-a274-e0a628c20c97";
-    const CORS_PROXY = "https://api.allorigins.win/get?url=";
+    const PROXY = "https://api.allorigins.win/get?url=";
 
-    // 1. CE-AQI LOGIC (Step 2 Protocol)
+    // 1. CE-AQI CALCULATION (Per Protocol Step 2)
     function calculateCEAQI(pollutants) {
         const values = Object.values(pollutants);
-        const baseValue = Math.max(...values); 
-        let adders = 0;
+        const baseValue = Math.max(...values);
+        let totalAdders = 0;
 
-        for (let p in pollutants) {
-            let val = pollutants[p];
-            if (val === baseValue) continue; // Skip basis pollutant
-            if (val >= 120) adders += (baseValue * 0.03);
-            else if (val >= 100) adders += (baseValue * 0.02);
-            else if (val >= 80) adders += (baseValue * 0.01);
+        for (const key in pollutants) {
+            const aqi = pollutants[key];
+            if (aqi === baseValue) continue; // Skip basis pollutant
+
+            if (aqi >= 120) totalAdders += (baseValue * 0.03);
+            else if (aqi >= 100) totalAdders += (baseValue * 0.02);
+            else if (aqi >= 80) totalAdders += (baseValue * 0.01);
         }
-        return Math.round(baseValue + adders);
+        return Math.round(baseValue + totalAdders);
     }
 
-    // 2. DATA FETCHING
+    // 2. DATA FETCHING WITH PROXY
     async function updateDashboard() {
         try {
-            // Fetch Quant-AQ (Ozone/NO2) via Proxy to fix CORS
+            // Fetching Quant-AQ (Ozone/NO2)
             const qaUrl = encodeURIComponent(`https://api.quant-aq.com/v1/devices/MOD-PM-00632/data/?api_key=${QA_KEY}`);
-            const qaResp = await fetch(CORS_PROXY + qaUrl);
-            const qaData = await qaResp.json();
-            const latestQA = JSON.parse(qaData.contents).data[0]; // Fixes 'undefined' reading
+            const qaResp = await fetch(PROXY + qaUrl);
+            const qaJson = await qaResp.json();
+            const qaData = JSON.parse(qaJson.contents).data[0]; // Accessing nested proxy content
 
-            // Fetch Black Carbon (COMET)
+            // Fetching Black Carbon (COMET)
             const cometUrl = encodeURIComponent(`https://grovestreams.com/api/v1/data/values?api_key=${COMET_KEY}&itemUid=b23f4615-846f-3426-9231-4a73bc94a40b`);
-            const bcResp = await fetch(CORS_PROXY + cometUrl);
-            const bcData = await bcResp.json();
-            const bcValue = JSON.parse(bcData.contents)[0].value;
+            const bcResp = await fetch(PROXY + cometUrl);
+            const bcJson = await bcResp.json();
+            const bcVal = JSON.parse(bcJson.contents)[0].value;
 
-            // Individual AQIs
-            const aqis = {
-                pm25: 105, // Placeholder (PurpleAir 24hr)
-                o3: 82,   // Mapped from latestQA
-                bc: 45    // Mapped from bcValue
+            // Individual AQIs (Insert specific conversion formulas here)
+            const aqiValues = {
+                pm25: 105, // Placeholder for PurpleAir 24hr Base
+                o3: 82,    // Mapped from Quant-AQ
+                bc: 45     // Mapped from COMET data
             };
 
-            const ceAQI = calculateCEAQI(aqis);
+            const ceAQI = calculateCEAQI(aqiValues);
             document.getElementById('aqiDisplay').innerText = ceAQI;
             updateUI(ceAQI);
-        } catch (e) {
-            console.error(e);
-            document.getElementById('statusLabel').innerText = "CONNECTION ERROR";
+        } catch (err) {
+            console.error(err);
+            document.getElementById('statusText').innerText = "DATA ERROR";
         }
     }
 
     function updateUI(aqi) {
         const card = document.getElementById('aqiCard');
-        const status = document.getElementById('statusLabel');
-        if (aqi <= 50) { card.style.borderTopColor = "#00e400"; status.innerText = "GOOD"; }
-        else if (aqi <= 100) { card.style.borderTopColor = "#ffff00"; status.innerText = "MODERATE"; }
-        else if (aqi <= 150) { card.style.borderTopColor = "#ff7e00"; status.innerText = "SENSITIVE"; }
-        else { card.style.borderTopColor = "#ff0000"; status.innerText = "UNHEALTHY"; }
+        const text = document.getElementById('statusText');
+        if (aqi <= 50) { card.style.borderTopColor = "#00e400"; text.innerText = "GOOD"; }
+        else if (aqi <= 100) { card.style.borderTopColor = "#ffff00"; text.innerText = "MODERATE"; }
+        else if (aqi <= 150) { card.style.borderTopColor = "#ff7e00"; text.innerText = "SENSITIVE"; }
+        else { card.style.borderTopColor = "#ff0000"; text.innerText = "UNHEALTHY"; }
     }
 
-    // Initialize Map
     const map = L.map('map').setView([38.923, -76.915], 14);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
     updateDashboard();
